--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nglibs/config",
-  "version": "0.2.0-rc.2",
+  "version": "0.2.0-rc.3",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
@@ -68,7 +68,7 @@
     "istanbul-instrumenter-loader": "0.2.0",
     "codelyzer": "^2.0.1",
     "tslint": "^4.4.2",
-    "typescript": "^2.1.6"
+    "typescript": "~2.1.6"
   },
   "peerDependencies": {
     "@angular/core": "^2.4.0 || >=4.0.0-beta.0",
