--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "istanbul-instrumenter-loader": "0.2.0",
     "codelyzer": "^2.0.1",
     "tslint": "^4.4.2",
-    "typescript": "^2.1.6"
+    "typescript": "~2.1.6"
   },
   "peerDependencies": {
     "@angular/core": "^2.4.0 || >=4.0.0-beta.0",
