--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
-    "zone.js": "^0.7.7",
-    "@types/node": "^7.0.5",
-    "@types/jasmine": "^2.5.43",
+    "zone.js": "^0.8.1",
+    "@types/node": "^7.0.8",
+    "@types/jasmine": "^2.5.45",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
     "gulp-exec": "^2.1.3",
     "gulp-tslint": "^7.1.0",
     "webpack": "^2.2.1",
-    "tslint-loader": "^3.4.2",
-    "awesome-typescript-loader": "^3.0.5",
+    "tslint-loader": "^3.4.3",
+    "awesome-typescript-loader": "^3.1.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.1",
     "karma-jasmine": "^1.1.0",
@@ -64,10 +64,10 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "karma-chrome-launcher": "^2.0.0",
-    "source-map-loader": "^0.1.6",
+    "source-map-loader": "^0.2.0",
     "istanbul-instrumenter-loader": "0.2.0",
-    "codelyzer": "^2.0.1",
-    "tslint": "^4.4.2",
+    "codelyzer": "^3.0.0-beta.3",
+    "tslint": "^4.5.1",
     "typescript": "~2.1.6"
   },
   "peerDependencies": {
