--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,23 @@
-################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# compiled output
+bundles/
 *.js
 *.d.ts
 *.metadata.json
-/.idea
-/bundles
-!/config/*.js
-/coverage
-/node_modules
-/obj/Debug
+
+# dependencies
+node_modules/
+yarn.lock
+
+# IDEs and editors
+.idea/
+
+# build tools
+coverage/
 !gulpfile.js
 !karma.conf.js
-nglibs.config.csproj
-nglibs.config.csproj.user
+
+# misc
+!config/*.js
 npm-debug.log
