--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "dependencies": {
+    "@types/lodash": "^4.14.55",
+    "lodash": "^4.17.4",
     "tslib": "^1.6.0"
   },
   "devDependencies": {
