--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "dependencies": {
-    "@types/lodash": "^4.14.55",
-    "lodash": "^4.17.4",
     "tslib": "^1.6.0"
   },
   "devDependencies": {
@@ -47,8 +45,10 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
     "zone.js": "^0.8.5",
+    "lodash": "^4.17.4",
     "@types/node": "^7.0.12",
     "@types/jasmine": "2.5.41",
+    "@types/lodash": "4.14.55",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
@@ -75,6 +75,7 @@
   "peerDependencies": {
     "@angular/core": "^2.0.0 || ^4.0.0",
     "@angular/http": "^2.0.0 || ^4.0.0",
-    "rxjs": "^5.0.1"
+    "rxjs": "^5.0.1",
+    "lodash": "^4.17.4"
   }
 }
