--- a/package.json
+++ b/package.json
@@ -39,16 +39,13 @@
     "@angular/compiler": "~2.4.0",
     "@angular/compiler-cli": "~2.4.0",
     "@angular/core": "~2.4.0",
-    "@angular/http": "~2.4.0",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
     "zone.js": "^0.8.5",
-    "lodash": "^4.17.4",
     "@types/node": "^7.0.12",
     "@types/jasmine": "2.5.41",
-    "@types/lodash": "4.14.55",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
@@ -74,8 +71,6 @@
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0 || ^4.0.0",
-    "@angular/http": "^2.0.0 || ^4.0.0",
-    "rxjs": "^5.0.1",
-    "lodash": "^4.17.4"
+    "rxjs": "^5.0.1"
   }
 }
