--- a/package.json
+++ b/package.json
@@ -39,26 +39,23 @@
     "@angular/compiler": "~2.4.0",
     "@angular/compiler-cli": "~2.4.0",
     "@angular/core": "~2.4.0",
-    "@angular/http": "~2.4.0",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.2.0",
-    "zone.js": "^0.8.5",
-    "lodash": "^4.17.4",
-    "@types/node": "^7.0.12",
+    "rxjs": "^5.3.0",
+    "zone.js": "^0.8.8",
+    "@types/node": "^7.0.13",
     "@types/jasmine": "2.5.41",
-    "@types/lodash": "4.14.55",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
     "gulp-exec": "^2.1.3",
-    "gulp-tslint": "^7.1.0",
-    "webpack": "^2.3.3",
-    "tslint-loader": "^3.4.3",
+    "gulp-tslint": "^8.0.0",
+    "webpack": "^2.4.1",
+    "tslint-loader": "^3.5.3",
     "awesome-typescript-loader": "^3.1.2",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
+    "karma": "^1.6.0",
     "karma-jasmine": "^1.1.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha-reporter": "^2.2.3",
@@ -66,7 +63,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "karma-chrome-launcher": "^2.0.0",
-    "source-map-loader": "^0.2.0",
+    "source-map-loader": "^0.2.1",
     "istanbul-instrumenter-loader": "0.2.0",
     "codelyzer": "^2.1.1",
     "tslint": "4.5.1",
@@ -74,8 +71,6 @@
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0 || ^4.0.0",
-    "@angular/http": "^2.0.0 || ^4.0.0",
-    "rxjs": "^5.0.1",
-    "lodash": "^4.17.4"
+    "rxjs": "^5.0.1"
   }
 }
