--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/core",
-  "version": "0.2.0-rc.4",
+  "version": "0.2.0-rc.5",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "dependencies": {
-    "tslib": "^1.6.0"
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
     "@angular/common": "~2.4.0",
@@ -42,31 +42,32 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.3.0",
-    "zone.js": "^0.8.8",
-    "@types/node": "^7.0.13",
-    "@types/jasmine": "2.5.41",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.16",
+    "@types/node": "^8.0.19",
+    "@types/jasmine": "^2.5.53",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
     "gulp-exec": "^2.1.3",
-    "gulp-tslint": "^8.0.0",
-    "webpack": "^2.4.1",
+    "gulp-tslint": "^8.1.1",
+    "webpack": "^3.4.1",
     "tslint-loader": "^3.5.3",
-    "awesome-typescript-loader": "^3.1.2",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.6.0",
+    "awesome-typescript-loader": "^3.2.2",
+    "jasmine-core": "^2.7.0",
+    "karma": "^1.7.0",
     "karma-jasmine": "^1.1.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha-reporter": "^2.2.3",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-webpack": "^2.0.4",
+    "karma-chrome-launcher": "^2.2.0",
     "source-map-loader": "^0.2.1",
-    "istanbul-instrumenter-loader": "0.2.0",
-    "codelyzer": "^2.1.1",
-    "tslint": "4.5.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "codelyzer": "^3.1.2",
+    "tslint": "~5.5.0",
+    "angular-tslint-rules": "^1.0.3",
     "typescript": "~2.1.6"
   },
   "peerDependencies": {
