--- a/package.json
+++ b/package.json
@@ -1,59 +1,43 @@
 {
-  "name": "@ngx-config/core",
-  "version": "0.2.0-rc.5",
+  "name": "ngx-config",
+  "version": "0.0.0",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ngx-config/core.git"
+    "url": "https://github.com/fulls1z3/ngx-config.git"
   },
-  "keywords": [
-    "app initializer",
-    "app config",
-    "configmodule",
-    "configuration",
-    "settings",
-    "APP_INITIALIZER",
-    "config",
-    "angular"
-  ],
+  "keywords": [],
   "author": {
     "name": "Burak Tasci",
     "email": "me@fulls1z3.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ngx-config/core/issues"
+    "url": "https://github.com/fulls1z3/ngx-config/issues"
   },
-  "homepage": "https://github.com/ngx-config/core#readme",
+  "homepage": "https://github.com/fulls1z3/ngx-config#readme",
   "scripts": {
-    "test": "karma start"
-  },
-  "main": "bundles/core.umd.min.js",
-  "module": "index.js",
-  "typings": "index.d.ts",
-  "dependencies": {
-    "tslib": "^1.7.1"
+    "test": "gulp test"
   },
   "devDependencies": {
     "@angular/common": "~2.4.0",
     "@angular/compiler": "~2.4.0",
-    "@angular/compiler-cli": "~2.4.0",
     "@angular/core": "~2.4.0",
+    "@angular/http": "~2.4.0",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "core-js": "^2.5.0",
+    "rxjs": "^5.4.3",
     "zone.js": "^0.8.16",
-    "@types/node": "^8.0.19",
     "@types/jasmine": "^2.5.53",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
     "gulp-exec": "^2.1.3",
-    "gulp-tslint": "^8.1.1",
-    "webpack": "^3.4.1",
+    "gulp-tslint": "^8.1.2",
+    "webpack": "^3.5.5",
     "tslint-loader": "^3.5.3",
-    "awesome-typescript-loader": "^3.2.2",
+    "awesome-typescript-loader": "^3.2.3",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
     "karma-jasmine": "^1.1.0",
@@ -69,9 +53,5 @@
     "tslint": "~5.5.0",
     "angular-tslint-rules": "^1.0.3",
     "typescript": "~2.1.6"
-  },
-  "peerDependencies": {
-    "@angular/core": "^2.0.0 || ^4.0.0",
-    "rxjs": "^5.0.1"
   }
 }
