--- a/packages/@ngx-config/fs-loader/tsconfig.json
+++ b/packages/@ngx-config/fs-loader/tsconfig.json
@@ -12,12 +12,21 @@
     "lib": [ "es2015", "dom" ],
     "declaration": true,
     "typeRoots": [
+      "../../../node_modules/@types",
       "./node_modules/@types"
     ]
   },
+  "files": [
+    "./index.ts",
+    "./src/config.fs-loader.ts"
+  ],
   "exclude": [
     "node_modules"
   ],
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true,
+    "skipTemplateCodegen": true
+  },
   "compileOnSave": false,
   "buildOnSave": false
 }
