--- a/packages/@ngx-config/core/tsconfig.json
+++ b/packages/@ngx-config/core/tsconfig.json
@@ -1,24 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": true,
+    "module": "es2015",
+    "target": "es5",
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,
-    "lib": [ "es2015", "dom" ],
     "declaration": true,
+    "removeComments": true,
     "typeRoots": [
       "../../../node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
     ]
   },
   "files": [
     "./index.ts",
-    "./src/config.service.ts",
-    "./src/config.loader.ts"
+    "./src/config.loader.ts",
+    "./src/config.service.ts"
   ],
   "exclude": [
     "node_modules"
