--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 language: node_js
 node_js:
   - "6"
+  - "7"
+  - "8"
 cache:
   directories: node_modules
 branches:
@@ -18,7 +20,22 @@ branches:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm i -g npm@^3
+  - yarn
+  - cd packages/@ngx-config/core
+  - yarn
+  - cd ../../..
+  - cd packages/@ngx-config/http-loader
+  - yarn
+  - cd ../../..
+  - cd packages/@ngx-config/fs-loader
+  - yarn
+  - cd ../../..
+  - cd packages/@ngx-universal/config-loader
+  - yarn
+  - cd ../../..
+  - cd packages/@ngx-config/merge-loader
+  - yarn
+  - cd ../../..
   - sleep 3
 after_failure:
   - cat /home/travis/build/fulls1z3/ngx-config/npm-debug.log
