--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,8 @@
 environment:
   matrix:
     - nodejs_version: "6"
+    - nodejs_version: "7"
+    - nodejs_version: "8"
 cache:
   # local npm modules
   - node_modules -> package.json
@@ -18,12 +20,24 @@ install:
   - npm install -g npm
   # install modules
   - npm install
+  - cd packages/@ngx-config/core
+  - npm install
+  - cd ../../..
+  - cd packages/@ngx-config/http-loader
+  - npm install
+  - cd ../../..
+  - cd packages/@ngx-config/fs-loader
+  - npm install
+  - cd ../../..
+  - cd packages/@ngx-universal/config-loader
+  - npm install
+  - cd ../../..
+  - cd packages/@ngx-config/merge-loader
+  - npm install
+  - cd ../../..
 # Post-install test scripts
 test_script:
   # Output useful info for debugging.
   - node --version && npm --version
-  # We test multiple Windows shells because of prior stdout buffering issues
-  # filed against Grunt. https://github.com/joyent/node/issues/3584
-  - ps: "npm test # PowerShell" # Pass comment to PS for easier debugging
   # run tests
   - cmd: npm test
