--- a/.travis.yml
+++ b/.travis.yml
@@ -20,21 +20,21 @@ branches:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm i -g npm@^3
+  - yarn
   - cd packages/@ngx-config/core
-  - npm i -g npm@^3
+  - yarn
   - cd ../../..
   - cd packages/@ngx-config/http-loader
-  - npm i -g npm@^3
+  - yarn
   - cd ../../..
   - cd packages/@ngx-config/fs-loader
-  - npm i -g npm@^3
+  - yarn
   - cd ../../..
   - cd packages/@ngx-universal/config-loader
-  - npm i -g npm@^3
+  - yarn
   - cd ../../..
   - cd packages/@ngx-config/merge-loader
-  - npm i -g npm@^3
+  - yarn
   - cd ../../..
   - sleep 3
 after_failure:
