--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "gulp clean --color",
     "lint": "gulp tslint --color",
     "make": "gulp make --color",
-    "test": "gulp test --color"
+    "test": "jest --runInBand --colors"
   },
   "devDependencies": {
     "@angular/common": "~2.4.0",
@@ -32,7 +32,10 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "zone.js": "^0.7.2",
-    "@types/jasmine": "^2.5.54",
+    "lodash": "^4.17.4",
+    "@types/node": "^8.0.25",
+    "@types/jest": "^20.0.8",
+    "@types/lodash": "4.14.55",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.5.0",
     "rimraf": "^2.6.1",
@@ -41,20 +44,35 @@
     "webpack": "^3.5.5",
     "tslint-loader": "^3.5.3",
     "awesome-typescript-loader": "^3.2.3",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha-reporter": "^2.2.4",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "source-map-loader": "^0.2.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
+    "jest": "^20.0.4",
+    "jest-preset-angular": "^2.0.5",
     "codelyzer": "^3.1.2",
     "tslint": "~5.7.0",
     "angular-tslint-rules": "^1.0.4",
     "typescript": "~2.1.6"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "./config/jest.setup.ts",
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "./tsconfig.json"
+      },
+      "__TRANSFORM_HTML__": true
+    },
+    "moduleNameMapper": {
+      "^ngx-config/core$": "<rootDir>/packages/@ngx-config/core/index.ts",
+      "^ngx-config/core/src/(.*)": "<rootDir>/packages/@ngx-config/core/$1",
+      "(.*)": "<rootDir>/packages/$1"
+    },
+    "cache": false,
+    "noStackTrace": true,
+    "silent": true,
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "packages/@ngx-config/core/src/**.ts",
+      "packages/@ngx-config/http-loader/src/**.ts",
+      "packages/@ngx-config/merge-loader/src/**.ts"
+    ]
   }
 }
