--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,19 +5,18 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,
+    "baseUrl": "",
+    "paths": {
+      "@ngx-config/core": ["./packages/@ngx-config/core"]
+    },
     "lib": [
       "es2017",
       "dom"
     ]
   },
   "include": [
-    "scripts/*.ts",
+    "tools/**/*.ts",
     "packages/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
