--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -25,17 +25,14 @@
     "url": "https://github.com/fulls1z3/ngx-config/issues"
   },
   "homepage": "https://github.com/fulls1z3/ngx-config/tree/master/packages/@ngx-config/core#readme",
-  "main": "./bundles/core.umd.min.js",
-  "module": "./index.js",
-  "typings": "./index.d.ts",
+  "main": "./bundles/core.umd.js",
+  "module": "./@ngx-config/core.es5.js",
+  "es2015": "./@ngx-config/core.js",
+  "typings": "./core.d.ts",
   "dependencies": {
-    "tslib": "^1.7.1"
-  },
-  "devDependencies": {
-    "@angular/compiler-cli": "~2.4.0"
+    "tslib": "~1.7.1"
   },
   "peerDependencies": {
-    "@angular/core": "^2.0.0 || ^4.0.0",
-    "rxjs": "^5.0.1"
+    "@angular/core": ">=2.0.0 <5.0.0"
   }
 }
