--- a/packages/@ngx-config/fs-loader/package.json
+++ b/packages/@ngx-config/fs-loader/package.json
@@ -31,7 +31,7 @@
     "tslib": "~1.7.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.0.0 <5.0.0",
+    "@angular/core": ">=2.0.0 <5.0.0 || >=4.0.0 <5.0.0",
     "@ngx-config/core": ">=0.2.0-rc.5"
   }
 }
