--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-config",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
@@ -46,7 +46,7 @@
     "ts-node": "^3.3.0",
     "glob": "^7.1.2",
     "camelcase": "^4.1.0",
-    "rollup": "^0.42.0",
+    "rollup": "~0.42.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
