--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/http-loader",
-  "version": "0.2.0-rc.1",
+  "version": "2.0.0",
   "description": "Loader for ngx-config that provides application settings using http",
   "repository": {
     "type": "git",
@@ -31,9 +31,9 @@
     "tslib": "~1.7.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.0.0 <5.0.0 || >=4.0.0 <5.0.0",
-    "@angular/http": ">=2.0.0 <5.0.0 || >=4.0.0 <5.0.0",
+    "@angular/core": ">=2.0.0 <4.0.0",
+    "@angular/http": ">=2.0.0 <4.0.0",
     "rxjs": ">=5.0.1",
-    "@ngx-config/core": ">=0.2.0-rc.5"
+    "@ngx-config/core": ">=2.0.0 <4.0.0"
   }
 }
