--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-config",
-  "version": "0.0.0",
+  "version": "4.0.0",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "rxjs": "^5.0.1",
     "zone.js": "^0.7.2",
     "lodash": "^4.17.4",
+    "@ngx-cache/core": "^4.0.0",
     "@types/node": "^8.0.25",
     "@types/jest": "^20.0.8",
     "@types/lodash": "4.14.55",
@@ -46,7 +47,7 @@
     "ts-node": "^3.3.0",
     "glob": "^7.1.2",
     "camelcase": "^4.1.0",
-    "rollup": "^0.42.0",
+    "rollup": "~0.42.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
@@ -83,6 +84,12 @@
       "packages/@ngx-config/core/src/**.ts",
       "packages/@ngx-config/http-loader/src/**.ts",
       "packages/@ngx-config/merge-loader/src/**.ts"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "@types/lodash",
+      "rollup"
     ]
   }
 }
