--- a/packages/@ngx-config/fs-loader/package.json
+++ b/packages/@ngx-config/fs-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/fs-loader",
-  "version": "0.2.0-beta.1",
+  "version": "4.0.0",
   "description": "Loader for ngx-config that provides application settings using fs (server platform)",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "tslib": "~1.7.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.0.0 <5.0.0 || >=4.0.0 <5.0.0",
-    "@ngx-config/core": ">=0.2.0-rc.5"
+    "@angular/core": ">=4.0.0 <5.0.0",
+    "@ngx-config/core": ">=4.0.0 <5.0.0"
   }
 }
