--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/merge-loader",
-  "version": "0.2.0-rc.1",
+  "version": "4.0.0",
   "description": "Loader for ngx-config that provides application settings by executing loaders in parallel and in series",
   "repository": {
     "type": "git",
@@ -33,9 +33,9 @@
     "tslib": "~1.7.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.0.0 <5.0.0 || >=4.0.0 <5.0.0",
+    "@angular/core": ">=4.0.0 <5.0.0",
     "rxjs": ">=5.0.1",
     "lodash": ">=4.17.4",
-    "@ngx-config/core": ">=0.2.0-rc.5"
+    "@ngx-config/core": ">=4.0.0 <5.0.0"
   }
 }
