--- a/packages/@ngx-config/http-loader/tsconfig.es5.json
+++ b/packages/@ngx-config/http-loader/tsconfig.es5.json
@@ -1,30 +1,8 @@
 {
+  "extends": "./tsconfig.es2015.json",
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "importHelpers": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "declaration": true,
-    "removeComments": true,
-    "stripInternal": true,
-    "outDir": "../../../../.temp/packages/@ngx-config/http-loader-es5/",
-    "rootDir": "./",
-    "baseUrl": "",
-    "paths": {
-      "@ngx-config/core": ["../../../../dist/@ngx-config/core"]
-    },
-    "typeRoots": ["../../../../node_modules/@types"],
-    "types": ["node"],
-    "lib": [
-      "es2015",
-      "dom"
-    ]
+    "outDir": "../../../../.temp/packages/@ngx-config/http-loader-es5/"
   },
   "files": ["./index.ts"],
   "angularCompilerOptions": {
