--- a/packages/@ngx-config/core/tsconfig.es2015.json
+++ b/packages/@ngx-config/core/tsconfig.es2015.json
@@ -29,7 +29,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "core.js",
-    "flatModuleId": "core",
+    "flatModuleId": "@ngx-config/core",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
