fix(fs-loader): fix moduleId for AoT compilation

--- a/packages/@ngx-config/fs-loader/tsconfig.es2015.json
+++ b/packages/@ngx-config/fs-loader/tsconfig.es2015.json
@@ -32,7 +32,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "fs-loader.js",
-    "flatModuleId": "fs-loader",
+    "flatModuleId": "@ngx-config/fs-loader",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
