fix(merge-loader): fix moduleId for AoT compilation

--- a/packages/@ngx-config/merge-loader/tsconfig.es2015.json
+++ b/packages/@ngx-config/merge-loader/tsconfig.es2015.json
@@ -35,7 +35,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "merge-loader.js",
-    "flatModuleId": "merge-loader",
+    "flatModuleId": "@ngx-config/merge-loader",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
