fix: fix moduleId for AoT compilation

--- a/packages/@ngx-universal/config-loader/tsconfig.es2015.json
+++ b/packages/@ngx-universal/config-loader/tsconfig.es2015.json
@@ -31,7 +31,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "config-loader.js",
-    "flatModuleId": "config-loader",
+    "flatModuleId": "@ngx-universal/config-loader",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
