--- a/packages/@ngx-config/core/tsconfig.es5.json
+++ b/packages/@ngx-config/core/tsconfig.es5.json
@@ -10,7 +10,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "core.js",
-    "flatModuleId": "core",
+    "flatModuleId": "@ngx-config/core",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
