--- a/packages/@ngx-config/merge-loader/tsconfig.es2015.json
+++ b/packages/@ngx-config/merge-loader/tsconfig.es2015.json
@@ -34,7 +34,7 @@
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
     "flatModuleOutFile": "merge-loader.js",
-    "flatModuleId": "merge-loader",
+    "flatModuleId": "@ngx-config/merge-loader",
     "genDir": "../../../../.temp/gen-dir/"
   }
 }
