--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,10 @@ jobs:
       - save_cache:
           key: deps-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths: 'node_modules'
-      - run: yarn ci:before
+      - run: sudo yarn ci:before
       - run: yarn test:ci
       - run: yarn build
-      - run: yarn ci:after
+      - run: sudo yarn ci:after
       - run: bash <(curl -s https://codecov.io/bash)
       - store_artifacts:
           path: coverage
