--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -30,12 +30,13 @@
   "es2015": "./@ngx-config/merge-loader.js",
   "typings": "./merge-loader.d.ts",
   "dependencies": {
-    "tslib": "~1.7.1"
+    "tslib": "~1.8.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0",
-    "rxjs": ">=5.0.1",
+    "@angular/core": ">=5.0.0 <6.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0 <6.0.0",
+    "rxjs": ">=5.5.0",
     "lodash": ">=4.17.4",
-    "@ngx-config/core": ">=4.0.0 <5.0.0"
+    "@ngx-config/core": ">=5.0.0 <6.0.0"
   }
 }
