--- a/packages/@ngx-universal/config-loader/package.json
+++ b/packages/@ngx-universal/config-loader/package.json
@@ -30,11 +30,13 @@
   "module": "./index.js",
   "typings": "./index.d.ts",
   "dependencies": {
-    "tslib": "~1.7.1"
+    "tslib": "~1.8.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=4.0.0 <5.0.0",
-    "@ngx-config/core": ">=4.0.0 <5.0.0",
-    "@ngx-cache/core": ">=4.0.0 <5.0.0"
+    "@angular/common": ">=5.0.0 <6.0.0",
+    "@angular/core": ">=5.0.0 <6.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0 <6.0.0",
+    "@ngx-config/core": ">=5.0.0 <6.0.0",
+    "@ngx-cache/core": ">=5.0.0 <6.0.0"
   }
 }
