--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/core",
-  "version": "4.0.1",
+  "version": "5.0.0",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
@@ -30,9 +30,11 @@
   "es2015": "./@ngx-config/core.js",
   "typings": "./core.d.ts",
   "dependencies": {
-    "tslib": "~1.7.1"
+    "tslib": "~1.8.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0"
+    "@angular/common": ">=5.0.0 <6.0.0",
+    "@angular/core": ">=5.0.0 <6.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0 <6.0.0"
   }
 }
