--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/http-loader",
-  "version": "4.0.1",
+  "version": "5.0.0",
   "description": "Loader for ngx-config that provides application settings using http",
   "repository": {
     "type": "git",
@@ -28,12 +28,13 @@
   "es2015": "./@ngx-config/http-loader.js",
   "typings": "./http-loader.d.ts",
   "dependencies": {
-    "tslib": "~1.7.1"
+    "tslib": "~1.8.1"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0",
-    "@angular/http": ">=4.0.0 <5.0.0",
-    "rxjs": ">=5.0.1",
-    "@ngx-config/core": ">=4.0.0 <5.0.0"
+    "@angular/common": ">=5.0.0 <6.0.0",
+    "@angular/core": ">=5.0.0 <6.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0 <6.0.0",
+    "rxjs": ">=5.5.0",
+    "@ngx-config/core": ">=5.0.0 <6.0.0"
   }
 }
