--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/fulls1z3/ngx-config#readme",
   "scripts": {
-    "clean": "rimraf .temp dist",
-    "build": "ts-node ./tools/build/rollup.ts && rimraf .temp",
+    "clean": "rimraf dist",
+    "build:core": "ts-node tools/build/packager.ts core",
+    "build:http-loader": "ts-node tools/build/packager.ts http-loader",
+    "build:merge-loader": "ts-node tools/build/packager.ts merge-loader",
+    "build": "npm run build:core && npm run build:http-loader && npm run build:merge-loader",
     "lint": "tslint -p ./tsconfig.json --force",
     "rebuild": "npm run clean && npm run build",
     "ci:before": "greenkeeper-lockfile-update",
@@ -28,40 +31,33 @@
     "release": "standard-version"
   },
   "devDependencies": {
-    "@angular/common": "5.2.1",
-    "@angular/compiler": "5.2.1",
-    "@angular/compiler-cli": "5.2.1",
-    "@angular/core": "5.2.1",
-    "@angular/platform-browser": "5.2.1",
-    "@angular/platform-browser-dynamic": "5.2.1",
-    "core-js": "~2.5.3",
-    "rxjs": "~5.5.6",
-    "zone.js": "~0.8.20",
-    "request": "~2.83.0",
-    "lodash": "~4.17.4",
-    "@ngx-cache/core": "5.0.0",
-    "@types/node": "~9.4.0",
-    "@types/jest": "~22.1.0",
-    "@types/lodash": "4.14.55",
+    "@angular/common": "6.0.0-rc.5",
+    "@angular/compiler": "6.0.0-rc.5",
+    "@angular/compiler-cli": "6.0.0-rc.5",
+    "@angular/core": "6.0.0-rc.5",
+    "@angular/platform-browser": "6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "6.0.0-rc.5",
+    "core-js": "~2.5.5",
+    "rxjs": "6.0.0-uncanny-rc.7",
+    "zone.js": "~0.8.26",
+    "request": "~2.85.0",
+    "lodash": "~4.17.5",
+    "@types/node": "~9.6.5",
+    "@types/jest": "~22.2.3",
+    "@types/lodash": "~4.14.107",
     "rimraf": "~2.6.2",
-    "ts-node": "~4.1.0",
-    "glob": "~7.1.2",
-    "camelcase": "~4.1.0",
-    "rollup": "~0.42.0",
-    "rollup-plugin-node-resolve": "~3.0.2",
-    "rollup-plugin-commonjs": "~8.3.0",
-    "rollup-plugin-sourcemaps": "~0.4.2",
-    "rollup-plugin-uglify": "~3.0.0",
+    "ts-node": "~6.0.0",
+    "ng-packagr": "~3.0.0-rc.1",
     "reflect-metadata": "~0.1.12",
-    "tsickle": "~0.26.0",
-    "jest": "~22.1.1",
-    "jest-preset-angular": "~5.0.0",
+    "tsickle": "~0.27.5",
+    "jest": "~22.4.3",
+    "jest-preset-angular": "~5.2.1",
     "jest-junit-reporter": "~1.1.0",
     "standard-version": "~4.3.0",
-    "codelyzer": "~4.1.0",
+    "codelyzer": "~4.2.1",
     "tslint": "~5.9.1",
     "angular-tslint-rules": "1.3.0",
-    "typescript": "~2.6.2"
+    "typescript": "~2.7.2"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -84,13 +80,11 @@
     "collectCoverageFrom": [
       "packages/@ngx-config/core/src/**.ts",
       "packages/@ngx-config/http-loader/src/**.ts",
-      "packages/@ngx-config/merge-loader/src/**.ts",
-      "packages/@ngx-universal/config-loader/src/**.ts"
+      "packages/@ngx-config/merge-loader/src/**.ts"
     ]
   },
   "greenkeeper": {
     "ignore": [
-      "@types/lodash",
       "rollup"
     ]
   }
