--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "importHelpers": true,
     "baseUrl": "",
     "paths": {
-      "@ngx-config/core": ["./packages/@ngx-config/core"]
+      "@ngx-config/*": ["./packages/@ngx-config/*"]
     },
     "lib": [
       "es2017",
