--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-config",
-  "version": "5.0.0",
+  "version": "6.0.0-rc.1",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
