--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/http-loader",
-  "version": "5.0.0",
+  "version": "6.0.0-rc.1",
   "description": "Loader for ngx-config that provides application settings using http",
   "repository": {
     "type": "git",
