--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/core",
-  "version": "6.0.0-rc.1",
+  "version": "6.0.0",
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
