--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/merge-loader",
-  "version": "6.0.0-rc.1",
+  "version": "6.0.0",
   "description": "Loader for ngx-config that provides application settings by executing loaders in parallel and in series",
   "repository": {
     "type": "git",
