--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
-    "url": "https://github.com/holidaylab/ngx-config.git"
+    "url": "https://github.com/fulls1z3/ngx-config.git"
   },
   "keywords": [],
   "author": {
     "name": "Burak Tasci",
-    "email": "b.tasci@holidaylab.io"
+    "email": "me@fulls1z3.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/holidaylab/ngx-config/issues"
+    "url": "https://github.com/fulls1z3/ngx-config/issues"
   },
-  "homepage": "https://github.com/holidaylab/ngx-config#readme",
+  "homepage": "https://github.com/fulls1z3/ngx-config#readme",
   "scripts": {
     "clean": "rimraf dist",
     "build:core": "ts-node tools/build/packager.ts core",
