--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/merge-loader",
-  "version": "7.0.0",
+  "version": "0.0.0",
   "description": "Loader for ngx-config that provides application settings by executing loaders in parallel and in series",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   ],
   "author": {
     "name": "Burak Tasci",
-    "email": "me@fulls1z3.com"
+    "email": "mail@buraktasci.com"
   },
   "license": "MIT",
   "bugs": {
@@ -34,5 +34,8 @@
     "rxjs": ">=6.0.0",
     "lodash": ">=4.17.10",
     "@ngx-config/core": ">=7.0.0 <8.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
