ci(circle): fix config

--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/fulls1z3/ngx-config/tree/master/packages/@ngx-config/http-loader#readme",
   "dependencies": {
-    "tslib": "~1.10.0"
+    "tslib": "^1.10.0"
   },
   "peerDependencies": {
     "@angular/common": ">=8.0.0 <9.0.0",
