--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/fulls1z3/ngx-config/tree/master/packages/@ngx-config/core#readme",
   "dependencies": {
-    "tslib": "~1.10.0"
+    "tslib": "^1.10.0"
   },
   "peerDependencies": {
     "@angular/common": ">=8.0.0 <9.0.0",
