--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -4,7 +4,7 @@
   "description": "Loader for ngx-config that provides application settings by executing loaders in parallel and in series",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fulls1z3/ngx-config.git"
+    "url": "https://github.com/fulls1z3/ngx-config"
   },
   "keywords": [
     "plugin",
